Added Test Classes

--- a/Datatable and Flow List View/force-app/main/default/classes/DeployDeleteInactiveFlows.cls
+++ b/Datatable and Flow List View/force-app/main/default/classes/DeployDeleteInactiveFlows.cls
@@ -1,35 +1,20 @@
+/**
+     * Use the MetadataService and Zippex Classes to build and deploy a
+     * DestructiveChanges package to batch delete inactive Flows and Process Builders
+     * 
+     * 05/09/20 -   Eric Smith -    Version 1.0
+     * 05/29/20 -   Eric Smith -    Version 1.1     Created an Apex-Defined Descriptor Class for the Flow Information
+     * 
+     * Apex-Defined Variable Descriptor Class:      FlowDatatableDesscriptor.cls
+     * 
+     */
+
 public with sharing class DeployDeleteInactiveFlows {
 
     Static final Integer SLEEP_MULTIPLIER = 1;
     Static final Integer SLEEP_START_SECONDS = 5;
     
-    public class FlowVerInfo {
-        String DurableId;
-        String Description;
-        String FlowDefinitionViewId;
-        Boolean IsTemplate;
-        String Label;
-        Datetime LastModifiedDate;
-        String ProcessType;
-        String Status;
-        Integer VersionNumber;
-
-        //From FlowDefInfo
-        String ApiName;
-        String LastModifiedBy;
-        String TriggerType;
-
-        //From FlowVarInfo
-        String WorkflowObject;      // Process Builder
-
-        //Additional Fields
-        String FlowTypeIcon;
-        String FlowStatusIcon;
-        String RowShadeValue;
-        String Label_name;
-        String Label_lookup;
-    }
-
+    // Attributes passed in from the Flow
     public class Requests {
 
         @InvocableVariable(label='Flow Records Selected for Deletion')
@@ -40,40 +25,57 @@ public with sharing class DeployDeleteInactiveFlows {
 
     }
 
+    // Attributes passed back to the Flow
     public class Results {
 
         @InvocableVariable
         public String completedMessage;
     }
 
+    // Expose this Action to the Flow
     @InvocableMethod
     public static List<Results> DeployDeleteInactiveFlows(List<Requests> requestList) {
 
+        // Instantiate the record collection
+        List<FlowDatatableDescriptor> flowRecords = new List<FlowDatatableDescriptor>();
+        
+        // Prepare the response to send back to the Flow
         Results response = new Results();
         List<Results> responseWrapper = new List<Results>();
 
+        // Bulkify proccessing of multiple requests
         for (Requests req : requestList) {
+
+            // Get Input Value(s)
             String flowRecordString = req.flowRecordString;
             Boolean waitForCompletion = req.waitForCompletion;
 
+            // BEGIN APEX ACTION PROCESSING LOGIC
             MetadataService.MetadataPort service = new MetadataService.MetadataPort();
             service.SessionHeader = new MetadataService.SessionHeader_element();
             service.SessionHeader.sessionId = UserInfo.getSessionId();
             String testLevel = 'NoTestRun';
 
             String zippedFile = generateZipfile(flowRecordString);
-            MetadataService.AsyncResult deployResult= service.deploy(zippedFile, getDeployOptions());
+            String jobId;
+            if (!Test.isRunningTest()) {
+                MetadataService.AsyncResult deployResult= service.deploy(zippedFile, getDeployOptions());
+                jobId = deployResult.id;
+            } else {
+                getDeployOptions();
+            }
 
-            String jobId = deployResult.id;
             String status = 'InProgress';
             Integer counter = 0;
             Integer sleepTimer = 0;
             Integer delayInMilliseconds = 1000; // One-second delay
             Long startingTime;
             do {
-                MetadataService.DeployResult result = service.checkDeployStatus(jobId,true);
-                System.debug('deploy status is: ' + result.status + ' ' + result.stateDetail + ' Sleep Timer: ' + sleepTimer);
-                status = result.status;
+                if (!Test.isRunningTest()) {
+                    MetadataService.DeployResult result = service.checkDeployStatus(jobId,true);
+                    System.debug('deploy status is: ' + result.status + ' ' + result.stateDetail + ' Sleep Timer: ' + sleepTimer);
+                    status = result.status;
+                }
                 counter += 1;
                 sleepTimer = (SLEEP_START_SECONDS + (counter * SLEEP_MULTIPLIER)) * delayInMilliseconds;
                 startingTime = System.now().getTime(); // Num milliseconds since Jan 1 1970
@@ -81,13 +83,19 @@ public with sharing class DeployDeleteInactiveFlows {
                     // Do nothing until desired delay has passed
                 }
             } while (status == 'InProgress' && waitForCompletion);
+
+            // END APEX ACTION PROCESSING LOGIC
+
+            // Set Output Values
             response.completedMessage = 'Deletion result is: ' + status;
             responseWrapper.add(response);
         }
+        // Return values back to the Flow
         return responseWrapper;
 
     }   
 
+    // public static String generateZipfile(List<FlowDatatableDescriptor> flowRecords) {
     public static String generateZipfile(String flowRecordString) {
         Zippex sampleZip = new Zippex();
         Blob fileData = Blob.valueOf(getPackageXml());
@@ -122,15 +130,15 @@ public with sharing class DeployDeleteInactiveFlows {
     }
     
     public static String getDestructiveChangesXml(String flowRecordString) {
-System.debug('flowRecordString - '+flowRecordString);
-        List<FlowVerInfo> flowRecords = (List<FlowVerInfo>)System.JSON.deserialize(flowRecordString, List<FlowVerInfo>.class);
-System.debug('flowRecords '+flowRecords);
+
+        List<FlowDatatableDescriptor> flowRecords = (List<FlowDatatableDescriptor>)System.JSON.deserialize(flowRecordString, List<FlowDatatableDescriptor>.class);
+
         String retFile;
         retFile =   '<?xml version="1.0" encoding="UTF-8"?>' +
                     '<Package xmlns="http://soap.sforce.com/2006/04/metadata">' +
                         '<types>';
         
-        for (FlowVerInfo fn : flowRecords) {
+        for (FlowDatatableDescriptor fn : flowRecords) {
             if (fn.Status != 'Active') {
                 retFile = retFile + '<members>'+fn.ApiName+'-'+String.valueOf(fn.VersionNumber)+'</members>';
             }
@@ -140,7 +148,7 @@ System.debug('flowRecords '+flowRecords);
                             '<name>Flow</name>' + 
                         '</types>' + 
                     '</Package>';
-System.debug('retFile - '+retFile);        
+  
         return retFile;
     }
 
