Fix spinner, size default & added box border

--- a/Datatable and Flow List View/force-app/main/default/classes/MetadataService.cls
+++ b/Datatable and Flow List View/force-app/main/default/classes/MetadataService.cls
@@ -11589,6 +11589,7 @@ public class MetadataService {
             MetadataService.deployResponse_element response_x;
             Map<String, MetadataService.deployResponse_element> response_map_x = new Map<String, MetadataService.deployResponse_element>();
             response_map_x.put('response_x', response_x);
+System.Debug('request_x'+request_x);
             WebServiceCallout.invoke(
               this,
               request_x,
