--- a/Datatable and Flow List View/force-app/main/default/classes/SObjectController2.cls
+++ b/Datatable and Flow List View/force-app/main/default/classes/SObjectController2.cls
@@ -16,6 +16,8 @@
  *              of the Name fields in the corresponding records. Return the
  *              records that now include both the Id and Name for each lookup.
  * 
+ * 06/03/20 -   Eric Smith -    Version 2.0     Renamed to allow for easier installation with datatableV2
+ * 
  * 04/28/20 -   Eric Smith -    Version 1.2     Handle lookup Objects without a Name field & 
  *                                              Trap non-updatable Master/Detail fields
  * 
@@ -25,7 +27,7 @@
  * 
  **/
 
-public with sharing class SObjectController {
+public with sharing class SObjectController2 {
 
     // this is just a convenient way to return multiple unique pieces of data to the component
     public class ReturnResults {
